--- a/Home/amenities.css
+++ b/Home/amenities.css
@@ -8,6 +8,7 @@ header {
    padding: 0 20%;
    height: 100px;
    font-family: 'Roboto', sans-serif;
+   margin-bottom: 100px;
 }
 
 nav {
@@ -49,8 +50,10 @@ nav ul li a:hover {
    display: flex;
    justify-content: center;
    align-items: center;
-   margin-top: 10px;
+   margin-top: 12px;
    margin-bottom: 10px;
+   border-radius: 4px;
+   height: 70px;
    border-radius: 4px;
    height: 70px;
 }
@@ -61,7 +64,7 @@ nav ul li a:hover {
    color: white;
    margin-left: 20px;
    margin-right: 20px;
-   font-family: 'Merriweather', serif;;
+   font-family: 'Merriweather', serif;
 }
 
 .book-now-button a:hover {
@@ -156,9 +159,17 @@ h3 {
 @media screen and (max-width: 1190px) {
 
    .flex {
+      display: flex;
+      flex-direction: row;
       background-color: white;
       margin-bottom: 30px;
       align-items: normal;
+      max-width: 100%;
+   }
+
+   .img {
+      margin-left: 1%;
+      margin-right: 1%;
    }
 
    .para {
@@ -182,13 +193,15 @@ h3 {
    }
 
    .img {
-      width: 50%;
-      height: 50%;
+      width: 48%;
+      height: 48%;
    }
 
-   * {
-      overflow-x: hidden;
+   body {
+      max-width: 100%;
+      overflow-x:hidden;
    }
+
 }
 
 .footer-container {
