--- a/All pages/booking.css
+++ b/All pages/booking.css
@@ -2,86 +2,12 @@
    margin: 0;
    padding: 0;
 }
- 
-header {
-   background-color: white;
-   padding: 0 20%;
-   height: 100px;
-   font-family: 'Roboto', sans-serif;
-   margin-bottom: 100px;
-}
-
-#center {
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
-}
-
-nav {
-   display: flex;
-   justify-content: space-between;
-}
-
-nav img {
-   height: 100px;
-   border-radius: 3px;
-}
- 
-nav ul {
-   list-style-type: none;
-   display: flex;
-   justify-content: center;
-}
- 
-nav ul li {
-   margin: 0 10px;
-   display: flex;
-   align-items: center;
-   
-}
- 
-nav ul li a {
-   color: black;
-   text-decoration: none;
-   font-size: 17px;
-   font-family: 'Raleway', sans-serif;
-}
-
-nav ul li a:hover {
-   color: rgb(255, 230, 0);
-}
-
-.book-now-button {
-   background-color: #2c2c2c;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   margin-top: 10px;
-   margin-bottom: 10px;
-   border-radius: 4px;
-   height: 70px;
-   border-radius: 4px;
-   height: 70px;
-}
-
-.book-now-button a {
-   text-decoration: none;
-   font-size: 1em;
-   color: white;
-   margin-left: 20px;
-   margin-right: 20px;
-   font-family: 'Merriweather', serif;
-}
-
-.book-now-button a:hover {
-   color: rgb(255, 230, 0);
-}
 
 h1 {
    text-align: center;
 }
 
-form {
+.booking-form {
    margin-top: 20px;
 }
 
@@ -144,42 +70,6 @@ button[type="submit"] {
    display: block;
 }
 
-footer {
-  font-family: 'Roboto', sans-serif;
-  background-color: beige;
-  color: black;
-  padding: 1%;
-  text-align: center; 
-}
-
-.top-footer {
-  background-color: #d4af37;
-  padding: 2px;
-  color: #fff; 
-  text-align: center;
-}
-
-.footer-buttons {
-  display: flex;
-  justify-content: right;
-}
-
-.footer-buttons button {
-  background-color: rgba(148, 126, 0, 0); 
-  border: none;
-  color: #333; 
-  margin-right: 25px;
-  cursor: pointer;
-  font-family: 'Raleway', sans-serif;
-  text-decoration: none;
-  font-size: 14px;
-}
-
-.fbutton {
-  text-decoration: none;
-  color: #000000;
-}
-
 .gold {
 background-color: #fdeaaa;
 margin-top: 50px;
@@ -187,7 +77,7 @@ font-family: 'Roboto', sans-serif;
 padding-bottom: 25px;
 }
 
-form {
+.booking-form {
    display:flex;
    flex-direction: row;
    justify-content: space-around;
@@ -243,45 +133,6 @@ select {
    background-color: white;
 }
 
-.footer-container{
-   margin-top: 20px;
-   padding: 20px 0;
-   background-color: beige;
-   text-align: center;
-}
-
-.footer-container {
-   width: auto;
-   margin: 0 auto;
-}
-
-.contact-button a {
-   display: inline-block;
-   padding: 10px 20px;
-   background-color: #d4af37;
-   color: #fff;
-   text-decoration: none;
-   border-radius: 5px;
-   font-family: 'Merriweather', serif;
-}
-
-.social-icons {
-   margin-top: 10px;
-}
-
-.social-icons .icon-link {
-   margin-right: 10px;
-}
-
-.social-icons img {
-   width: 30px;
-   height: 30px;
-}
-
-.social-icons .icon-link:hover img {
-   opacity: 0.8;
-}
-
 .group {
    display: flex;
    flex-direction: row;
@@ -303,110 +154,4 @@ select {
    color: #000000;
    border-color: #d4af37;
    border-radius: 5px;
-}
-
-.footer-container {
-   width: auto;
-   margin: 0 auto;
-}
-
-.site-footer {
-   padding: 5em 0;
-   background: #f2f2f2;
-   font-size: 16px;
-}
- 
- .site-footer h3 {
-   margin-bottom: 20px;
-   font-family: "Rubik", arial, sans-serif;
-   font-size: 13px;
-   letter-spacing: .2em;
-   color: #b3b3b3;
-   text-transform: uppercase;
- }
- 
- .site-footer .list-unstyled li {
-   margin-bottom: 15px;
- }
- 
- .site-footer .list-unstyled li h3 {
-   font-size: 16px;
-   font-weight: normal;
-   font-family: "Rubik", arial, sans-serif;
- }
- 
- .site-footer p {
-   color: #000;
- }
- 
- .site-footer p:last-child {
-   margin-bottom: 0;
- }
- 
- .site-footer a {
-   color: #000;
- }
- 
- .site-footer a:hover {
-   opacity: .4;
- }
- 
- .site-footer .footer-link li {
-   line-height: 1.5;
-   margin-bottom: 15px;
- }
- 
- .site-footer hr {
-   width: 100%;
- }
- 
- .subscribe .form-group {
-   position: relative;
- }
- 
- .subscribe input[type="email"] {
-   padding-right: 40px;
- }
- 
- .subscribe button {
-   border: none;
-   background: none;
-   cursor: pointer;
-   right: 10px;
-   top: 50%;
-   -webkit-transform: translateY(-50%);
-   -ms-transform: translateY(-50%);
-   transform: translateY(-50%);
-   position: absolute;
- }
- 
- .subscribe button span {
-   font-size: 30px;
- }
-
-.contact-button a {
-   display: inline-block;
-   padding: 10px 20px;
-   background-color: #d4af37;
-   color: #fff;
-   text-decoration: none;
-   border-radius: 5px;
-   font-family: 'Merriweather', serif;
-}
-
-.social-icons {
-   margin-top: 10px;
-}
-
-.social-icons .icon-link {
-   margin-right: 10px;
-}
-
-.social-icons img {
-   width: 30px;
-   height: 30px;
-}
-
-.social-icons .icon-link:hover img {
-   opacity: 0.8;
 }
