--- a/All pages/dining.css
+++ b/All pages/dining.css
@@ -1,6 +1,7 @@
 * {
    margin: 0;
    padding: 0;
+   box-sizing: border-box;
 }
 
 .site-section {
@@ -8,11 +9,30 @@
 }
 
 .site-hero {
+  background-image: url("../images/big_image_1.jpg");
+  background-position: -25px -25px;
    background-size: cover;
    background-position: center center;
    min-height: 750px;
    height: 100vh;
    font-family: 'Antic Didone', serif;
+ }
+
+ .container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+ }
+
+ .site-hero-inner {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
  }
  
  .site-hero > .container {
@@ -42,6 +62,30 @@
  
  .site-hero.overlay h1 {
    font-size: 60px;
+   margin-bottom: 0.5rem;
+   font-family: inherit;
+   font-weight: 500;
+   line-height: 1.2;
+   color: inherit;
+   margin-top: 0;
+   margin-block-start: 0.83em;
+   margin-block-end: 0.83em;
+   color: white;
+ }
+
+ .text-center {
+  text-align: center;
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+  flex: 0 0 100%;
+  max-width: 100%;
+ }
+
+ .element-animate {
+  margin-bottom: 3rem;
  }
  
  @media (max-width: 1199.98px) {
@@ -52,6 +96,9 @@
  
  .site-hero.overlay p {
    font-size: 30px;
+   color: #fff;
+   margin-top: 0;
+   margin-bottom: 1rem;
  }
  
  @media (max-width: 1199.98px) {
@@ -78,6 +125,28 @@
    padding: 30px;
    background: #fff;
  }
+
+ .row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+ }
+
+ .col-md-4 {
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+ }
+
+ @media only screen and (min-width: 768px) {
+  .col-md-4 {
+    flex: 0 0 33.3%;
+    max-width: 33.3%;
+  }
+ }
  
  .post-entry .body-text .category {
    position: relative;
@@ -97,6 +166,29 @@
    background: #000;
    position: absolute;
    bottom: 0;
+ }
+
+ .img-fluid {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  border-style: none;
+  overflow-clip-margin: content-box;
+  overflow: clip;
+ }
+
+ .mb-3 {
+  margin-bottom: 1rem;
+  font-size: 1.75rem;
+  font-weight: 500;
+  line-height: 1.2;
+  margin-top: 0;
+  color: #b99365;
+ }
+
+ .mb-4 {
+  margin-bottom: 1.5rem;
+  margin-top: 0;
  }
 
  .room {
@@ -227,6 +319,9 @@
    text-transform: uppercase;
    letter-spacing: .15em;
    font-family: 'Merriweather', serif;
+   line-height: 1.5;
+   border: 1px solid #b99365;
+   text-decoration: none;
  }
  
  .btn.btn-black {
