--- a/All pages/rbooking.css
+++ b/All pages/rbooking.css
@@ -1,78 +1,218 @@
 * {
-    margin: 0;
-    padding: 0;
- }
- 
- .site-section {
-    padding: 7em 0;
- }
- 
- .site-hero {
-    background-size: cover;
-    background-position: center center;
-    min-height: 750px;
-    height: 100vh;
-    font-family: 'Antic Didone', serif;
-  }
-  
-  .site-hero > .container {
-    position: relative;
-    z-index: 2;
-  }
-  
-  .site-hero.overlay {
-    position: relative;
-  }
-  
-  .site-hero.overlay:before {
-    content: "";
-    background: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-  
-  .site-hero.overlay h1, .site-hero.overlay p {
-    color: #fff;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Antic Didone', serif;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 1.8;
+  color: #6c757d;
+}
+
+.site-section {
+  padding: 7em 0;
+}
+
+.site-hero {
+ background-image: url("../images/big_image_1.jpg");
+ background-position: -25px -25px;
+  background-size: cover;
+  background-position: center center;
+  min-height: 750px;
+  height: 100vh;
+  font-family: 'Antic Didone', serif;
+}
+
+.container {
+ width: 100%;
+ padding-right: 15px;
+ padding-left: 15px;
+ margin-right: auto;
+ margin-left: auto;
+}
+
+.site-hero-inner {
+ align-items: center;
+ justify-content: center;
+ display: flex;
+ flex-wrap: wrap;
+ margin-right: -15px;
+ margin-left: -15px;
+}
+
+.site-hero > .container {
+  position: relative;
+  z-index: 2;
+}
+
+.site-hero.overlay {
+  position: relative;
+}
+
+.site-hero.overlay:before {
+  content: "";
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.site-hero.overlay h1, .site-hero.overlay p {
+  color: #fff;
+}
+
+.site-hero.overlay h1 {
+  font-size: 60px;
+  margin-bottom: 0.5rem;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.2;
+  color: inherit;
+  margin-top: 0;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  color: white;
+}
+
+.text-center {
+ text-align: center;
+ position: relative;
+ width: 100%;
+ min-height: 1px;
+ padding-right: 15px;
+ padding-left: 15px;
+ flex: 0 0 100%;
+ max-width: 100%;
+}
+
+.element-animate {
+ margin-bottom: 3rem;
+}
+
+@media (max-width: 1199.98px) {
   .site-hero.overlay h1 {
-    font-size: 60px;
+    font-size: 40px;
   }
-  
-  @media (max-width: 1199.98px) {
-    .site-hero.overlay h1 {
-      font-size: 40px;
-    }
-  }
-  
+}
+
+.site-hero.overlay p {
+  font-size: 30px;
+  color: #fff;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+@media (max-width: 1199.98px) {
   .site-hero.overlay p {
-    font-size: 30px;
+    font-size: 20px;
   }
-  
-  @media (max-width: 1199.98px) {
-    .site-hero.overlay p {
-      font-size: 20px;
-    }
+}
+
+.site-hero .site-hero-inner {
+  min-height: 750px;
+  height: 100vh;
+}
+
+.site-hero-innerpage, .site-hero-innerpage .site-hero-inner {
+  min-height: 550px;
+  height: 50vh;
+}
+
+.site-hero h1, .site-hero p, .body-text {
+  font-family: 'Antic Didone', serif;
+}
+
+.container {
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
+
+}
+
+@media only screen and (min-width: 576px) {
+  .container {
+    max-width: 540px;
   }
-  
-  .site-hero .site-hero-inner {
-    min-height: 750px;
-    height: 100vh;
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 720px;
   }
- 
-  .site-hero-innerpage, .site-hero-innerpage .site-hero-inner {
-    min-height: 550px;
-    height: 50vh;
+}
+
+@media only screen and (min-width: 992px) {
+  .container {
+    max-width: 960px;
   }
- 
-  .site-hero h1, .site-hero p, .body-text {
-    font-family: 'Antic Didone', serif;
+}
+
+@media only screen and (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
   }
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.col-md-6 {
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+@media only screen and (min-width: 768px) {
+  .col-md-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
+.mb-5 {
+  margin-bottom: 3rem;
+  color: black;
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.2;
+  margin-top: 0;
+}
+
+.form-group {
+  margin-bottom: 1rem;
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+@media only screen and (min-width: 576px) {
+  .form-group {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
+label {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+}
 
   .btn, .form-control {
     outline: none;
@@ -86,8 +226,17 @@
   }
 
   .form-control {
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
+    box-shadow: none;
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    margin: 0;
   }
   
   textarea.form-control {
@@ -112,6 +261,17 @@
   .btn.btn-primary {
     color: #fff;
     border-width: 2px;
+    background-color: #b99365;
+    border-color: #b99365;
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    border: 1px solid transparent;
+    font-size: 1rem;
+    line-height: 1.5;
   }
   
   .btn.btn-primary:hover, .btn.btn-primary:active, .btn.btn-primary:focus {
